--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hotelbookingsystem
 # DataSource settings: MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_booking_system_db
 spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.password=HariD@9178
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Settings
